# lingmo-kwin-plugins

./: .gitmodules  CMakeLists.txt
.github/workflows/: Auto CI Test Build.yml  build.yml  release.yml
config/: kwinrc  kwinrulesrc
debian/: changelog  control
plugins/: CMakeLists.txt
plugins/decoration/: CMakeLists.txt  button.cpp  button.h  decoration.cpp  decoration.h  lingmoos.json  x11shadow.cpp
plugins/decoration/decoration/: button.cpp  button.h  decoration.cpp  decoration.h  helper.h
plugins/roundedwindow/: roundedwindow.cpp  roundedwindow.h
plugins/roundedwindow_Legacy/: CMakeLists.txt  roundedwindow.cpp
scripts/ling_popups/: metadata.json
scripts/ling_popups/contents/code/: main.js
scripts/ling_scale/: metadata.json
scripts/ling_scale/contents/code/: main.js
scripts/ling_squash/: metadata.json
scripts/linglauncher/: metadata.desktop
scripts/linglauncher/contents/: main.js
